--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Color générator</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="box">
+      <p id="rgbtext">Rgb : 
+        <span id="rgb1"></span>
+        <span id="rgb2"></span>
+        <span id="rgb3"></span></p>
+    </div>
+
+    <script src="./index.js"></script>
+  </body>
 </html>
