end of exercice

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <span id="rgb2"></span>
         <span id="rgb3"></span></p>
     </div>
+    <div class="btn">
+    <button id="stop">Stop !</button>
+    </div>
 
     <script src="./index.js"></script>
   </body>
